--- a/chatgpt-action-config.json
+++ b/chatgpt-action-config.json
@@ -2,13 +2,13 @@
   "openapi": "3.1.0",
   "info": {
     "title": "SportsNaukri Job API Middleware",
-    "description": "Optimized API middleware that fetches and filters job listings from SportsNaukri.com. Returns only essential job data (id, title, employer, location, job type, qualification, description summary, and link) for better ChatGPT integration.",
-    "version": "v1.0.0"
+    "description": "Optimized API middleware that fetches and filters job listings from SportsNaukri.com. Returns only essential job data with smart location detection and multi-keyword search. 82% smaller payload than direct WordPress API.",
+    "version": "v1.1.0"
   },
   "servers": [
     {
-      "url": "http://localhost:3000",
-      "description": "Local development server (replace with your production URL)"
+      "url": "https://chat-gpt-api-endpoint.vercel.app",
+      "description": "Production server"
     }
   ],
   "paths": {
