Update domain to sportsnaukri-gpt.vercel.app and improve location filtering logic

--- a/chatgpt-action-config.json
+++ b/chatgpt-action-config.json
@@ -7,7 +7,7 @@
   },
   "servers": [
     {
-      "url": "https://chat-gpt-api-endpoint.vercel.app",
+      "url": "https://sportsnaukri-gpt.vercel.app",
       "description": "Production server"
     }
   ],
